Added endif in item_employee.html

--- a/app/core/templates/employee_item.html
+++ b/app/core/templates/employee_item.html
@@ -2,8 +2,9 @@
     <strong>{{ employee.full_name}}</strong> - {{ employee.position }} ({{ employee.salary }})
     {% if subordinates %}
     <ul>
-        {% for item subordinates %}
+        {% for item in subordinates %}
             {% include 'employee_item.html' with employee=item.employee subordinates=item.subordinates %}
         {% endfor %}
     </ul>
+    {% endif %}
 </li>
